@@ -58,61 +58,50 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.32</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
-
-<!--  <build>-->
-<!--    <plugins>-->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-compiler-plugin</artifactId>-->
-<!--        <version>3.14.1</version>-->
-<!--      </plugin>-->
-
-
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-surefire-plugin</artifactId>-->
-<!--        <version>2.20</version>-->
-<!--        <configuration>-->
-<!--          <forkCount>3</forkCount>-->
-<!--          <reuseForks>true</reuseForks>-->
-<!--          <argLine>-Xmx1024m</argLine>-->
-<!--          &lt;!&ndash;					-XX:MaxPermSize=256m&ndash;&gt;-->
-<!--          <suiteXmlFiles>-->
-<!--            <suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>-->
-<!--            &lt;!&ndash; <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> &ndash;&gt;-->
-<!--          </suiteXmlFiles>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
 
 <!-- Use the Below one-->
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.14.1</version>
-      </plugin>
+    <!-- To define the plugin version in your parent POM -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.14.0</version>
+          <configuration>
+            <source>17</source>
+            <target>17</target>
+            <fork>true</fork>
+            <compilerArgs>
+              <arg>--add-opens</arg>
+              <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-        <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
-          <suiteXmlFiles>
-            <suiteXmlFile>testrunners/testng_AmazonRunner.xml</suiteXmlFile>
-            <suiteXmlFile>testrunners/testng_regressions.xml</suiteXmlFile>
-            <suiteXmlFile>testrunners/testng_SwagLabRunner.xml</suiteXmlFile>
-            <suiteXmlFile>testrunners/testng_TestAutomationRunner.xml</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-      </plugin>
-
-    </plugins>
+        <!-- To use the plugin goals in your POM or parent POM -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.3</version>
+          <configuration>
+            <suiteXmlFiles>
+              <suiteXmlFile>src/test/resources/testrunners/testng_SwagLabRunner.xml</suiteXmlFile>
+            </suiteXmlFiles>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
 </project>
